# py-scopes

./: .gitignore  CHANGES.txt  CONTRIBUTORS.txt  LICENSE  README.md  interfaces.py  pyproject.toml  requirements.txt  runtests.sh  setup.py
demo/: app.py  config.py  demo_server.py  env.in  main.py  server.py  shell.py
demo/log/: README.md
docs/: LICENSE.txt
scopes/: __init__.py  interfaces.py  tests.py  tlib_storage.py  util.py
scopes/org/: __init__.py  mail.py  task.py  user.py
scopes/organize/: __init__.py  mail.py  task.py
scopes/server/: __init__.py  app.py  auth.py  browser.py
scopes/server/auth/: __init__.py
scopes/storage/: README.rst  __init__.py  common.py  concept.py  folder.py  message.py  proxy.py  relation.py  topic.py  tracking.py
scopes/storage/db/: __init__.py  postgres.py
scopes/tests/: __init__.py  config.py  data_auth.py  dummy_requests.py  oidc_responses.py  scratch.py  test-private-key.json  test_postgres.py  test_standard.py  tlib_server.py  tlib_storage.py  tlib_web.py  util.py
scopes/tests/log/: README.md
scopes/web/: __init__.py  app.py  browser.py  client.py
scopes/web/auth/: __init__.py  oidc.py
tests/: config.py  postgres.py  standard.py  test_postgres.py  test_standard.py  test_storage.py  tlib.py  tlib_server.py  tlib_storage.py
