[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-scopes"
version = "3.0.1"
description = "Implementation of the unknown 'scopes' paradigm in Python"
readme = "README.md"
license = {text = "MIT"}
keywords = ["scopes"]
authors = [{name = "Helmut Merz", email = "helmutm@cy55.de"}]

dependencies = [
	"SQLAlchemy",
]

[project.optional-dependencies]
postgres = [
	"psycopg[binary]",
	"transaction",
	"zope.sqlalchemy",
]
app = [
	"python-dotenv", 
	"waitress",
	"zope.authentication",
	"zope.interface",
	"zope.publisher", 
	"zope.traversing",
]
auth = ["pyjwt[crypto]", "cryptography"]
test = ["zope.testrunner"]
#test = ["pytest"]

[tool.setuptools]
packages = ["scopes"]

#[tool.pytest.ini_options]
#addopts = "-vv"
#python_files = "test_standard.py" # default: run only `standard` tests
# use .pytest.ini file with `python_files = test_*.py` to run all tests

